# final-project-repo-team-6

./: .gitignore  README.md  WORKING1020.ipynb  WORKING102525.ipynb  adjustedpdfbillextract-1.ipynb  analysis_within_topics.ipynb  analysisintopics2.ipynb  congressional_data.csv  homelessness_data.csv  pdf_test_to_parse - Sheet1.csv  pdf_to_csv.ipynb  pyproject.toml  quiana.py  topic_stuff.ipynb
Final_Notebooks_Data/: Copy_of_QA_colab_lab.ipynb  merge.ipynb  nlp_first.ipynb
Final_Notebooks_Data/reports /: congressional_homelessness_analysis_final_report.txt
Working_Notebooks/: WORKING102525.ipynb  adjustedpdfbillextract-1.ipynb  pdf-1.ipynb  test.ipynb
scripts/: hello_sanjana.py  hello_sanya.py
