[project]
name = "Language Around Homelesness Project"
version = "0.0.1"
description = "Final Project Group 6 Repository for COMPSS-211"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
